[project]
name = "nonebot-plugin-mimo-console"
version = "0.1.0"
description = "A glass-style WebUI management console for NoneBot2"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "MimoKit", email = "278909251+MimoKit@users.noreply.github.com" },
]
keywords = ["nonebot", "nonebot2", "webui", "dashboard", "console"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "nb-cli>=1.4.2",
  "nonebot-plugin-localstore>=0.7.4,<1.0.0",
  "nonebot2[fastapi]>=2.5.0,<3.0.0",
  "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/MimoKit/nonebot-plugin-mimo-console"
Issues = "https://github.com/MimoKit/nonebot-plugin-mimo-console/issues"
Repository = "https://github.com/MimoKit/nonebot-plugin-mimo-console.git"

[dependency-groups]
dev = [
  "bump-my-version>=1.2.7",
  "poethepoet>=0.42.1",
  "ruff>=0.15.2,<1.0.0",
  { include-group = "test" },
]
test = [
  "pytest>=9.0.2,<10.0.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0,<4.0.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
message = "chore: 发布 v{new_version}"
tag = true

[[tool.bumpversion.files]]
filename = "uv.lock"
search = "name = \"nonebot-plugin-mimo-console\"\nversion = \"{current_version}\""
replace = "name = \"nonebot-plugin-mimo-console\"\nversion = \"{new_version}\""

[tool.coverage.run]
source = ["src/nonebot_plugin_mimo_console"]

[tool.coverage.report]
exclude_lines = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError:",
]

[tool.nonebot]
plugins = ["nonebot_plugin_mimo_console"]

[tool.poe.tasks]
test = "pytest --cov=src/nonebot_plugin_mimo_console --cov-report xml --junitxml=./junit.xml -n auto"
bump = "bump-my-version bump"
show-bump = "bump-my-version show-bump"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"
defineConstant = { PYDANTIC_V2 = true }
executionEnvironments = [
  { root = "./tests", extraPaths = ["./src"] },
  { root = "./src" },
]

[tool.pytest.ini_options]
addopts = ["--import-mode=prepend", "--tb=short", "-ra"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["nonebot_plugin_mimo_console"]
